--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
 	    	</div>
 			<h1>{{sketch}}</h1>
     		<p id="description">{{description}}</p>
-			<p id="sources">Source code: {{source}}</p>
+			<p id="sources">Author: {{author}}</p>
 			<p>
 			Built with <a href="http://processing.org" title="Processing">Processing</a>
 			and <a href="http://processingjs.org" title="Processing.js">Processing.js</a>
