--- a/templates/index.html
+++ b/templates/index.html
@@ -46,6 +46,9 @@
 		<!--[if lt IE 9]>
 			<script type="text/javascript">alert("Your browser does not support the canvas tag.");</script>
 		<![endif]-->
+		<script type="text/javascript">
+		function getProcessingSketchId () { return '{{id}}'; }
+		</script>
 		<script src="processing.js" type="text/javascript"></script>
 	</head>
 	<body>
