add livereload for websocket enabled browsers

--- a/templates/index.html
+++ b/templates/index.html
@@ -70,5 +70,7 @@
 			and <a href="http://processingjs.org" title="Processing.js">Processing.js</a>
 			</p>
 		</div>
-	</body>
+
+		<script src="livereload.js"></script
+>	</body>
 </html>
