--- a/templates/index.html
+++ b/templates/index.html
@@ -50,6 +50,9 @@
 		function getProcessingSketchId () { return '{{id}}'; }
 		</script>
 		<script src="processing.js" type="text/javascript"></script>
+		{{#scripts}}
+		<script src="{{.}}"></script>
+		{{/scripts}}
 	</head>
 	<body>
 		<div id="content">
